--- a/memo.org
+++ b/memo.org
@@ -1,4 +1,81 @@
 #+title: Memo
-* 会話の逸脱
-* off-topic
- w      v
+
+
+* Idea
+** 「ピントはずれ」の定義
+*** 国語辞典の定義
+物事の肝心なところをとらえていないこと。[[https://dictionary.goo.ne.jp/word/%E3%83%94%E3%83%B3%E3%83%88%E5%A4%96%E3%82%8C/#jn-189247][出典]]
+
+(的外れ)大事な点をはずしていること。見当違いなこと。([[https://dictionary.goo.ne.jp/word/%E7%9A%84%E5%A4%96%E3%82%8C/#jn-209085][出典]])
+
+
+
+*** 本研究の文脈に沿った定義(案)
+- 意図的に生成された、適切または期待されていない応答のこと
+  - どう適切でないの？
+  - じゃあ何を期待していたの？
+
+
+- 会話の主題またはユーザーの意図や期待される内容から、逸脱した発言や応答
+  - 逸脱の程度は？
+    少しだけ逸脱させるのか、全く関係のないところまで逸脱させるのか
+  - ユーザの意図って？
+  - 何を期待していたの？
+  - その例は？
+*** ピントはずれな受け答えの例
+- 例を提示しながら定義について説明する。
+ - この例は〇〇だから、ピントはずれ（本研究でしたい意味）。
+ - この例は「唐揚げが飛んでった→トランプ関税やめてほしいよね，はハズレすぎ」だから、出鱈目。
+ - この例は〇〇だから、ピントはずれ（出鱈目ではないけど、話の内容にはほとんど関係のないことに対してピントを外してしまっている。）
+
+** ピントはずれがもたらす影響
+- 自己高力感
+
+** ピントはずれが思考の刺激となるロジックを考える
+
+
+*** 会話例
+user：今日の晩御飯はカレーにしようかな、
+agent：カレーねいいね！カレーってインドが有名だよね。だけど意外と〇〇(国とか地域）でも頻繁に食されているんだよ
+user：（その国のカレーってどんなものなんだろう。食べてみたいな。今日はそれにしようかな・・・）
+
+唐揚げ落とした。あ、虫歯にならなくてよかったね。
+チャーハンがパラパラずぎて風で飛んでっちゃったよ。もっとべちゃべちゃにしてよ
+
+風が吹けば桶屋が儲かる、理論
+
+
+
+
+** 生成AIではダメなのか
+- 既存の生成AIでは出鱈目すぎる応答をしてしまう
+- ブラックボックスとなっているため、なぜそのような応答になったのか説明できない
+
+** キーワード
+*** en
+- off-topic
+
+*** ja
+- 会話の逸脱
+- 非関連応答
+- 逸脱
+- 微妙な話題のずれ
+- 話題提供
+- メタ認知
+- 関連性の低い情報が創造性を刺激するという研究知見（ほんと？）
+
+** memo
+*** 70％関連、30％逸脱のイメージ
+*** ゆうせいとの会話
+水平思考クイズ（うみがめのスープ）
+ピントはずれをいった理由を考える過程が大事
+やり取りの例があまり思いつかないため、メリットが少ないのかも
+因果関係ではなく相関関係？があるものがy
+*** エラーカテゴリ
+**** 発話レベル
+**** 応答レベル
+**** 文脈レベル
+**** 環境レベル
+* Papers
+** 東中先生の研究
+***
